Add support for CF